--- a/next_pizza/package.json
+++ b/next_pizza/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -20,6 +21,7 @@
     "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
+    "prisma": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-use": "^17.5.1",
