--- a/next_pizza/.env
+++ b/next_pizza/.env
@@ -1,22 +1,3 @@
 # Recommended for most uses
-DATABASE_URL=postgres://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgres://neondb_owner:E4KvknRWzt1e@ep-winter-wave-a4kafovo-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
 
-# For uses requiring a connection without pgbouncer
-DATABASE_URL_UNPOOLED=postgresql://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7.eu-central-1.aws.neon.tech/neondb?sslmode=require
-
-# Parameters for constructing your own connection string
-PGHOST=ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech
-PGHOST_UNPOOLED=ep-winter-mouse-a21ozsl7.eu-central-1.aws.neon.tech
-PGUSER=neondb_owner
-PGDATABASE=neondb
-PGPASSWORD=GHK1ikJgFo9C
-
-# Parameters for Vercel Postgres Templates
-POSTGRES_URL=postgres://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
-POSTGRES_URL_NON_POOLING=postgres://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7.eu-central-1.aws.neon.tech/neondb?sslmode=require
-POSTGRES_USER=neondb_owner
-POSTGRES_HOST=ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech
-POSTGRES_PASSWORD=GHK1ikJgFo9C
-POSTGRES_DATABASE=neondb
-POSTGRES_URL_NO_SSL=postgres://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech/neondb
-POSTGRES_PRISMA_URL=postgres://neondb_owner:GHK1ikJgFo9C@ep-winter-mouse-a21ozsl7-pooler.eu-central-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require
