--- a/next_pizza/.env
+++ b/next_pizza/.env
@@ -1,3 +1,4 @@
 # Recommended for most uses
 DATABASE_URL=postgres://neondb_owner:E4KvknRWzt1e@ep-winter-wave-a4kafovo-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
 
+NEXT_PUBLIC_API_URL = '/api'
