--- a/next_pizza/package.json
+++ b/next_pizza/package.json
@@ -15,12 +15,15 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/qs": "^6.9.18",
     "axios": "^1.7.9",
@@ -30,15 +33,21 @@
     "lucide": "^0.460.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.8.16",
     "qs": "^6.14.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-use": "^17.5.1",
+    "resend": "^4.3.0",
+    "stripe": "^18.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "vaul": "^1.1.1",
+    "zod": "^3.24.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
